@@ -1,4 +1,5 @@
 1.9 -> Development
+ - Removed spurious SAM header when writing alignemnts in plain text format. 
 1.9
  - New fdr mode provides a tool to combine tab delimited file where some columns contain P-values and
    adjust selected P-values for multiple testing with the Benjamini Hochberg method. The tool is efficient
